# datarpg-v1-python

./: .editorconfig  README.md  pyproject.toml
src/datarpg/: character.py  combat.py  faction.py  prop.py
src/datarpg/datarpg_hash/: character.py  combat.py
tests/: test_character.py  test_combat.py  test_faction.py  test_prop.py
tests/datarpg_hash/: test_character.py  test_combat.py
