[project]
name = "datarpg"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    { name = "Giorgio Vilardo", email = "giorgio@vilardo.eu" }
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = false

[tool.pdm.scripts]
fmt = "ruff format --preview src tests"
lint = "ruff check --preview --fix src tests"
mypy = "mypy --strict --explicit-package-bases src tests"
pyright = "pyright src tests"
fl = { composite = ["mypy", "pyright", "lint", "fmt"] }

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.1",
    "pytest>=8.1.1",
    "ipython>=8.23.0",
    "ipdb>=0.13.13",
    "ruff-lsp>=0.0.53",
    "mypy>=1.9.0",
    "pyright>=1.1.359",
]

[tool.ruff]
line-length = 88
lint.select = [
    "E", "W", "F", "C90", "I", "N", "D", "UP", "YTT",
    "ANN", "ASYNC", "TRIO", "BLE", "FBT", "B", "COM", "C4",
    "DTZ", "T10", "EM", "ISC", "ICN", "LOG", "G", "INP",
    "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SLOT",
    "SIM", "TID", "INT", "ARG", "PTH", "TD", "ERA", "PGH",
    "PL", "R", "FLY", "PERF", "FURB", "RUF"
]
lint.ignore = [
    "E501", "D203", "D212", "D104", "D100", "D101", "D106", "D103",
    "COM812"
]
